Facebook login support

--- a/lib/lang/en.i18n.json
+++ b/lib/lang/en.i18n.json
@@ -16,6 +16,8 @@
 	"login_password_remember": "Remember login",
 	"login_password_remember_small": "if this is a private computer",
 	"login": "Login",
+	"loging_in": "Loging in",
+	"logout": "Logout",
 	"register": "Register",
 
 	"calendar": "Calendar",      
