--- a/lib/lang/et.i18n.json
+++ b/lib/lang/et.i18n.json
@@ -16,6 +16,8 @@
 	"login_password_remember": "Pea mind meeles",
 	"login_password_remember_small": "kui see on isiklik arvuti",
 	"login": "Logi sisse",
+	"loging_in": "Login sisse",
+	"logout": "Logi välja",
 	"register": "Registreeri",
 
 	"calendar": "Kalender",
