Example user roles and Payments flow implemented

--- a/lib/lang/en.i18n.json
+++ b/lib/lang/en.i18n.json
@@ -24,6 +24,7 @@
 	"calendar_description": "All games and start times here",
 
 	"user_basic": "Basic user",
+	"user_premium": "Premium user",
 	"user_register_premium": "Upgrade to Premium",
 	"user_profile": "Your profile",
 	"user_statistics": "Statistics",
