--- a/lib/lang/et.i18n.json
+++ b/lib/lang/et.i18n.json
@@ -24,6 +24,7 @@
 	"calendar_description": "Kõik mängud ja nende toimumisajad siit",
 
 	"user_basic": "Tavakasutaja",
+	"user_premium": "Preemium",
 	"user_register_premium": "Registreeri Preemiumiks",
 	"user_profile": "Sinu profiil",
 	"user_statistics": "Statistika",
