User registering via email
Facebook login part needs to be adjusted to get profile picture

--- a/lib/lang/et.i18n.json
+++ b/lib/lang/et.i18n.json
@@ -94,12 +94,13 @@
 	"register_back_home": "Avalehele",
 	"register_title": "Registreerimine",
 	"register_info": "Täida allolevad väljad",
-	"register_username": "Kasutajanimi",
+	"register_firstname": "Eesnimi",
+	"register_lastname": "Perenimi",
 	"register_pw": "Sisesta salasõna",
 	"register_pw_repeat": "Korda Salasõna",
 	"register_email": "Sisesta Email",
 	"register_email_repeat": "Korda Emaili",
-	"register_subscribe": "Liitu uudiskirjaga",
+	"register_agree_terms": "Nõustun lehekülje tingimustega",
 	"register_button": "Registreeri",
 	"register_cancel": "Tühista",	
 	
