--- a/lib/lang/en.i18n.json
+++ b/lib/lang/en.i18n.json
@@ -94,14 +94,16 @@
 	"register_back_home": "Back to Home",
 	"register_title": "Register your account",
 	"register_info": "Fill in the fields",
-	"register_username": "Username",
+	"register_firstname": "First name",
+	"register_lastname": "Last name",
 	"register_pw": "Password",
 	"register_pw_repeat": "Repeat Password",
 	"register_email": "Email Address",
 	"register_email_repeat": "Repeat Email Address",
-	"register_subscribe": "Sign up for our newsletter",
+	"register_agree_terms": "I have accepted the Terms and Conditions",
 	"register_button": "REGISTER",
 	"register_cancel": "CANCEL",
+	
 	
 	
 //ErrorOne
